@@ -24,22 +24,22 @@ gdouble sp_desktop_horizontal_snap(SPDesktop const *dt, NRPoint* req);
 gdouble sp_desktop_vertical_snap(SPDesktop const *dt, NRPoint* req);
 
 /* List of points methods */
-double sp_desktop_dim_snap_list_skew(SPDesktop const *desktop, NRPoint p[], int const length, NRPoint const *norm, double const sy, unsigned const dim);
+double sp_desktop_dim_snap_list_skew(SPDesktop const *desktop, NRPoint const p[], int const length, NRPoint const *norm, double const sy, unsigned const dim);
 
-double sp_desktop_vector_snap_list (SPDesktop const *desktop, NR::Point *p, const int length, const NR::Point& norm, double sx, const double sy);
+double sp_desktop_vector_snap_list(SPDesktop const *desktop, NR::Point const p[], const int length, const NR::Point& norm, double sx, const double sy);
 
 // These little functions are only here to provide an edge between NRPoint-land and NR::Point-land.
 
-double sp_desktop_dim_snap_list(SPDesktop const *desktop, NRPoint p[], int const length,
+double sp_desktop_dim_snap_list(SPDesktop const *desktop, NRPoint const p[], int const length,
 				double const dx, unsigned const dim);
 
-double sp_desktop_horizontal_snap_list_scale (SPDesktop const *desktop, NRPoint *p, const int length, const NRPoint* norm, const double sx);
-double sp_desktop_vertical_snap_list_scale (SPDesktop const *desktop, NRPoint *p, const int length, const NRPoint* norm, const double sx);
+double sp_desktop_horizontal_snap_list_scale(SPDesktop const *desktop, NRPoint const p[], int const length, NRPoint const *norm, double const sx);
+double sp_desktop_vertical_snap_list_scale(SPDesktop const *desktop, NRPoint const p[], int const length, NRPoint const *norm, double const sx);
 
-double sp_desktop_vector_snap_list (SPDesktop const *desktop, NRPoint *p, const int length, const NRPoint* norm, const double sx, const double sy);
+double sp_desktop_vector_snap_list (SPDesktop const *desktop, NRPoint const p[], int const length, NRPoint const *norm, double const sx, double const sy);
 
-double sp_desktop_horizontal_snap_list_skew (SPDesktop const *desktop, NRPoint *p, const int length, const NRPoint* norm, const double sx);
-double sp_desktop_vertical_snap_list_skew (SPDesktop const *desktop, NRPoint *p, const int length, const NRPoint* norm, const double sx);
+double sp_desktop_horizontal_snap_list_skew(SPDesktop const *desktop, NRPoint const p[], int const length, NRPoint const *norm, double const sx);
+double sp_desktop_vertical_snap_list_skew(SPDesktop const *desktop, NRPoint const p[], int const length, NRPoint const *norm, double const sx);
 
 /* Single point methods */
 double sp_desktop_free_snap (SPDesktop const *desktop, NRPoint *req);
